<resources>
    <string name="app_name">Running Pace Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="welcomeHeader">Running Pace Calculator</string>
    <string name="welcomeMsg">Welcome to the Running Pace Calculator.
        This application is designed to calculate the time of your average mile
        from a distance run. Simply enter a timed run along with total distance ran
        and the calculator will generate your average timed pace per mile.</string>
    <string name="welcomeButton">Get Started\!</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_input_user_data">Enter Your Run</string>
    <string name="run_hour">Run Duration: Hours</string>
    <string name="run_minute">Run Duration: Minutes</string>
    <string name="run_seconds">Run Duration: Seconds</string>
    <string name="run_distance">Run Distance: Miles</string>
    <string name="title_activity_result">Average Running Pace</string>
    <string name="calculate_run_button">Calculate Run Pace</string>
    <string name="result_view">TextView</string>
    <string name="back_input_button">Calculate Another Run</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="design_by_text">Designed by: Adam Beech \© RABeech.com</string>
    <string name="main_act_design_by">Designed by: Adam Beech © RABeech.com</string>
    <string name="get_started">Get Started!</string>
    <string name="kilo_to_miles">Convert Kilometers to Miles</string>
    <string name="run_duration_hours">Run Duration: Hours</string>
    <string name="run_duration_minutes">Run Duration: Minutes</string>
    <string name="run_duration_seconds">Run Duration: Seconds</string>
    <string name="run_distance_miles">Run Distance: Miles</string>
    <string name="title_activity_main2">Running Pace Calculator</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_running_resources">Running Resources</string>
    <string name="large_text">
        Chances are, nobody is gonna care or use this page!
    </string>
    <string name="title_activity_saved_runs">Saved Runs</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="save_run_header">TextView</string>
    <string name="title_activity_share">Sharing is Caring</string>
    <string name="share_tab_header">TextView</string>
    <string name="title_activity_share_run">Share</string>
    <string name="share_run_content">TextView</string>
    <string name="btn_calculate_another_run">Calculate Another Run</string>
    <string name="btn_save_this_run">Save This Run</string>
    <string name="btn_view_saved_runs">View Saved Runs</string>
    <string name="title_activity_about">About</string>
</resources>
