<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/UserData"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.rabeech.runningpacecalculator.InputUserData"
    tools:showIn="@layout/activity_input_user_data">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/run_time_hours"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/run_time_hours_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/run_duration_hours"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/run_time_minutes"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/run_time_hours"
        app:layout_constraintRight_toRightOf="@+id/run_time_hours"
        app:layout_constraintTop_toBottomOf="@+id/run_time_hours">

        <EditText
            android:id="@+id/run_time_minutes_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/run_duration_minutes"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/run_time_seconds"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/run_time_minutes"
        app:layout_constraintRight_toRightOf="@+id/run_time_minutes"
        app:layout_constraintTop_toBottomOf="@+id/run_time_minutes">

        <EditText
            android:id="@+id/run_time_seconds_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/run_duration_seconds"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/run_time_distance"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/run_time_seconds"
        app:layout_constraintRight_toRightOf="@+id/run_time_seconds"
        app:layout_constraintTop_toBottomOf="@+id/run_time_seconds">

        <EditText
            android:id="@+id/run_time_distance_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/run_distance_miles"
            android:inputType="numberDecimal" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/input_user_data_button"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="dataEntryValdation"
        android:text="@string/calculate_run_button"
        android:textAllCaps="false"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/run_time_distance"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:id="@+id/kilo_to_mile"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:text="@string/kilo_to_miles"
        android:textAllCaps="false"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_user_data_button"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

</android.support.constraint.ConstraintLayout>
